--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,48 @@
+body{
+    margin: auto;
+    background-color: #eee;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 5em;
+    text-align: center;
+
+}
+h1{
+    color: rgba(255,155,155, .75);
+    text-transform: uppercase;
+}
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 10px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .slider:hover {
+    opacity: 1;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 23px;
+    height: 24px;
+    border: 0;
+    background: url('tomato.png');
+    cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 23px;
+    height: 24px;
+    border: 0;
+    background: url('tomato.png');
+    cursor: pointer;
+  }
 #cycleCounter {
     display: block;
 }
