--- a/styles.css
+++ b/styles.css
@@ -10,39 +10,42 @@ h1{
     color: rgba(255,155,155, .75);
     text-transform: uppercase;
 }
-.slider {
-    -webkit-appearance: none;
-    width: 100%;
-    height: 10px;
-    border-radius: 5px;
-    background: #d3d3d3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-  }
-  
-  .slider:hover {
-    opacity: 1;
-  }
-  
-  .slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 23px;
-    height: 24px;
-    border: 0;
-    background: url('tomato.png');
-    cursor: pointer;
-  }
-  
-  .slider::-moz-range-thumb {
-    width: 23px;
-    height: 24px;
-    border: 0;
-    background: url('tomato.png');
-    cursor: pointer;
-  }
+.range-wrap {
+  position: relative;
+  margin: 0 auto 3rem;
+}
+.range {
+  width: 100%;
+}
+.bubble {
+  background: red;
+  color: white;
+  padding: 4px 12px;
+  position: absolute;
+  border-radius: 4px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.bubble::after {
+  content: "";
+  position: absolute;
+  width: 2px;
+  height: 2px;
+  background: red;
+  top: -1px;
+  left: 50%;
+}
+
+body {
+  margin: 2rem;
+}
+
 #cycleCounter {
     display: block;
+}
+#container {
+  border: 1px solid black;
+  padding: 3em;
+  background-color: rgba(0,255,0, .45);
+  margin: auto;
 }
