--- a/styles.css
+++ b/styles.css
@@ -49,3 +49,58 @@ body {
   background-color: rgba(0,255,0, .45);
   margin: auto;
 }
+#display {
+  border: 1px solid black;
+  background-color: rgba(0,200,0, 1);
+  
+}
+#taskDisplay {
+  display: block;
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+#taskBoard > button {
+  margin-bottom: 1em;
+}
+button {
+  display: inline-block;
+  padding:0.5em 3em;
+  border:0.16em solid #ffffff;
+  margin: 0 0.3em 0.3em 0;
+  box-sizing: border-box;
+  text-decoration:none;
+  text-transform: uppercase;
+  font-family: 'Roboto', sans-serif;
+  font-weight:400;
+  color:#ffffff;
+  text-align:center;
+  transition: all 0.15s;
+  background-color: rgba(0,200,0, 0);
+  cursor: pointer;
+}
+button:hover{
+  color:#ddd;
+  border-color:#ddd;
+}
+button:active{
+  color:#bbb;
+  border-color:#bbb;
+}
+#refreshButton{
+  
+  display: inline-block;
+  padding:0.5em 3em;
+  border:0.16em solid #ffffff;
+  margin: 0 0.3em 0.3em 0;
+  box-sizing: border-box;
+  text-decoration:none;
+  text-transform: uppercase;
+  font-family: 'Roboto', sans-serif;
+  font-weight:400;
+  color:#ffffff;
+  text-align:center;
+  transition: all 0.15s;
+  background-color: rgba(0,200,0, 0);
+  cursor: pointer;
+
+}
